Change a directory structure of namespace 'RidiPay\Transaction' to apply DDD & Make namespace 'RidiPay\Pg' as seperated
